--- a/src/app/protected/cranix/security/unbound/unbound.component.html
+++ b/src/app/protected/cranix/security/unbound/unbound.component.html
@@ -22,7 +22,7 @@
     <ion-fab-button size="small">
       <ion-icon name="arrow-forward-circle"></ion-icon>
     </ion-fab-button>
-    <ion-fab-list side="end">
+    <ion-fab-list>
       <ion-fab-button fill="clear" (click)="writeConfig()" [disabled]="saving">
         <ion-icon name="checkmark" color="success"></ion-icon>
       </ion-fab-button>
