--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -1,10 +1,7 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-content id="carded">
-  <ion-row class="header-row">
-    <ion-col size=6>
-      <ion-title>{{'Manage customers' | translate}}</ion-title>
-    </ion-col>
-  </ion-row>
+<cranix-toolbar title="{{'Manage customers' | translate}}"></cranix-toolbar>
+<ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('customersFilterMD')"
+  id="customersFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+<ion-content>
   <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
     <ion-fab-button>
       <ion-icon name="arrow-forward-circle"></ion-icon>
@@ -21,43 +18,35 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('customersFilterMD')"
-    id="customersFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{'Manage customers' | translate}}</ion-card-title>
-        <ion-item>
-          <ion-label *ngIf="gridApi">
-            #{{gridApi.getDisplayedRowCount()}}
-          </ion-label>
-          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('customersFilter')"
-            id="customersFilter">
-          </ion-input>
-        </ion-item>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
-            matTooltip="{{'Create a new customer' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="redirectToAddInstitute($event)"
-            matTooltip="{{'Create a new institute for the selected customer' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-            <ion-icon slot="icon-only" name="business"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="openCollums($event)"
-            matTooltip="{{'Select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [rowData]="objectService.allObjects['customer']"
-        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [context]="context"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+  <ion-toolbar>
+    <ion-item>
+      <ion-label *ngIf="gridApi">
+        #{{gridApi.getDisplayedRowCount()}}
+      </ion-label>
+      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('customersFilter')"
+        id="customersFilter">
+      </ion-input>
+    </ion-item>
+    <ion-buttons slot="end">
+      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+        matTooltip="{{'Create a new customer' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="redirectToAddInstitute($event)"
+        matTooltip="{{'Create a new institute for the selected customer' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+        <ion-icon slot="icon-only" name="business"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="openCollums($event)"
+        matTooltip="{{'Select the columns to show' | translate }}">
+        <ion-icon slot="icon-only" name="apps"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+    rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}"
+    [rowData]="objectService.allObjects['customer']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+    [context]="context" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+    (gridReady)="onGridReady($event)">
+  </ag-grid-angular>
 </ion-content>
