--- a/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
+++ b/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
@@ -1,29 +1,16 @@
-<cranix-toolbar></cranix-toolbar>
+<cranix-toolbar title="{{'Status of the institute:' | translate}} {{ object.name }}"></cranix-toolbar>
 <ion-content id="carded">
-<ion-row class="header-row">
-  <ion-col>
+  <ion-toolbar>
     <ion-title>{{'Status of the institute:' | translate}} {{ object.name }}</ion-title>
-  </ion-col>
-</ion-row>
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-title>{{'Status of the institute:' | translate}} {{ object.name }}</ion-title>
-        <ion-item>
-          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('instituteStatusFilter')"
-            id="instituteStatusFilter">
-          </ion-input>
-        </ion-item>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular
-        id="instituteStatusGrid" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
-        [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef" headerHeight="150"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+    <ion-item>
+      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('instituteStatusFilter')"
+        id="instituteStatusFilter">
+      </ion-input>
+    </ion-item>
+  </ion-toolbar>
+  <ag-grid-angular id="instituteStatusGrid" style="width: 100%; height: 100%;"
+    class="{{authService.settings.agGridThema}}" rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}"
+    [context]="context" [rowData]="rowData" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
+  </ag-grid-angular>
 </ion-content>
