--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -1,37 +1,22 @@
-<cranix-toolbar *ngIf="!selectedStatus"></cranix-toolbar>
-<ion-row *ngIf="!selectedStatus" class="header-row">
-  <ion-col>
-    <ion-title>{{'Status of the institutes' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
+<cranix-toolbar *ngIf="!selectedStatus" title="{{'Status of the institutes' | translate}}"></cranix-toolbar>
 <ion-content *ngIf="!authService.isMD() && !selectedStatus" id="carded">
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{'Status of the institutes' | translate}}</ion-card-title>
-        <ion-item>
-          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')"
-            id="quickFilter">
-          </ion-input>
-        </ion-item>
-        <ion-buttons slot="end">
-          <ion-button size="small" (click)="openCollums($event)"
-            matTooltip="{{'Select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
-        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (firstDataRendered)="headerHeightSetter()" (columnResized)="headerHeightSetter()"
-        (gridReady)="onGridReady($event)">
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+  <ion-toolbar>
+    <ion-item>
+      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
+      </ion-input>
+    </ion-item>
+    <ion-buttons slot="end">
+      <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'Select the columns to show' | translate }}">
+        <ion-icon slot="icon-only" name="apps"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+    rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
+    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (firstDataRendered)="headerHeightSetter()"
+    (columnResized)="headerHeightSetter()" (gridReady)="onGridReady($event)">
+  </ag-grid-angular>
 </ion-content>
 <ion-content *ngIf="authService.isMD() && !selectedStatus" fullscreen>
   <ion-list>
@@ -39,7 +24,8 @@
       <ion-label>
         <h3>{{ object.cephalixInstituteId | idToName:'institute' }}</h3>
       </ion-label>
-      <ion-badge [color]="object.availableUpdates == '' ? 'success' : 'danger'">{{object.availableUpdates.split(' ').length -1}}</ion-badge>
+      <ion-badge [color]="object.availableUpdates == '' ? 'success' : 'danger'">{{object.availableUpdates.split('
+        ').length -1}}</ion-badge>
       <ion-icon size="small" name="stats-chart" [color]="errorStatus(object)"></ion-icon>
       <ion-icon size="small" name="save" [color]="fsStatus(object)"></ion-icon>
       <ion-icon size="small" name="alarm" [color]="connectStatus(object)"></ion-icon>
