--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -1,56 +1,39 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{'Manage institutes' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
+<cranix-toolbar title="{{'Manage institutes' | translate}}"></cranix-toolbar>
 <ion-content *ngIf="!authService.isMD()" id=carded>
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{'Manage institutes' | translate}}</ion-card-title>
-        <ion-item>
-          <ion-label *ngIf="gridApi">
-            #{{gridApi.getDisplayedRowCount()}}
-          </ion-label>
-          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilter')"
-            id="institutesFilter">
-          </ion-input>
-        </ion-item>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
-            matTooltip="{{'Create a new institute' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="openActions($event,null)"
-            matTooltip="{{'Apply actions on the selected objects' | translate }}">
-            <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="openCollums($event)"
-            matTooltip="{{'Select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular
-        id="agGridTable"
-        style="width: 100%; height: 100%;"
-        rowSelection="multiple"
-        class="{{authService.settings.agGridThema}}"
-        rowHeight="{{authService.settings.rowHeight}}"
-        [context]="context"
-        [rowData]="objectService.allObjects['institute']"
-        [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (selectionChanged)="selectionChanged()"
-        (gridReady)="onGridReady($event)">
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+  <ion-toolbar>
+    <ion-item>
+      <ion-label *ngIf="gridApi">
+        #{{gridApi.getDisplayedRowCount()}}
+      </ion-label>
+      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilter')"
+        id="institutesFilter">
+      </ion-input>
+    </ion-item>
+    <ion-buttons slot="end">
+      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+        matTooltip="{{'Create a new institute' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="openActions($event,null)"
+        matTooltip="{{'Apply actions on the selected objects' | translate }}">
+        <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="openCollums($event)"
+        matTooltip="{{'Select the columns to show' | translate }}">
+        <ion-icon slot="icon-only" name="apps"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" rowSelection="multiple"
+    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+    [rowData]="objectService.allObjects['institute']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (selectionChanged)="selectionChanged()"
+    (gridReady)="onGridReady($event)">
+  </ag-grid-angular>
 </ion-content>
+
+<ion-searchbar *ngIf="authService.isMD()" placeholder="{{'search' | translate }}"
+  (input)="onQuickFilterChanged('institutesFilterMD')" id="institutesFilterMD" showCancelButton="never"></ion-searchbar>
 <ion-content *ngIf="authService.isMD()">
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small">
@@ -68,20 +51,18 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilterMD')"
-    id="institutesFilterMD" showCancelButton="never"></ion-searchbar>
-  <ion-list >
+  <ion-list>
     <ion-item *ngIf="rowData.length == 0">
       <ion-label>
         {{ 'Loading data ...' | translate }}
       </ion-label>
     </ion-item>
     <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item [color]="regcodeValid(object)" button  (click)="redirectToEdit(object)">
+      <ion-item [color]="regcodeValid(object)" button (click)="redirectToEdit(object)">
         <ion-note slot="start">
           <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
-        <ion-label [color]="regcodeValid(object)" >
+        <ion-label [color]="regcodeValid(object)">
           <h3>{{ object.name }}</h3>
           <h4>{{ object.regCode }}</h4>
         </ion-label>
