--- a/src/app/protected/cranix/rooms/lists/adhoc.component.html
+++ b/src/app/protected/cranix/rooms/lists/adhoc.component.html
@@ -1,51 +1,33 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{'Manage AdHoc rooms' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
+<cranix-toolbar title="{{'Manage AdHoc rooms' | translate}}"></cranix-toolbar>
 <ion-content *ngIf="!authService.isMD()" id="carded">
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{'Manage AdHoc rooms' | translate}}</ion-card-title>
-        <ion-item>
-          <ion-label *ngIf="gridApi">
-            #{{gridApi.getDisplayedRowCount()}}
-          </ion-label>
-          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('adhocFilter')" id="adhocFilter">
-          </ion-input>
-        </ion-item>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
-            matTooltip="{{'Create a new room' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="openCollums($event)"
-            matTooltip="{{'Select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular
-        id="adhocComponentTable"
-        style="width: 100%; height: 100%;"
-        rowSelection="multiple"
-        class="{{authService.settings.agGridThema}}"
-        rowHeight="{{authService.settings.rowHeight}}"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        [context]="context"
-        [rowData]="objectService.allObjects['adhocroom']"
-        [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef"
-        (selectionChanged)="selectionChanged()"
-        (gridReady)="onGridReady($event)">
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+  <ion-toolbar>
+    <ion-item>
+      <ion-label *ngIf="gridApi">
+        #{{gridApi.getDisplayedRowCount()}}
+      </ion-label>
+      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('adhocFilter')" id="adhocFilter">
+      </ion-input>
+    </ion-item>
+    <ion-buttons slot="end">
+      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+        matTooltip="{{'Create a new room' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="openCollums($event)"
+        matTooltip="{{'Select the columns to show' | translate }}">
+        <ion-icon slot="icon-only" name="apps"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ag-grid-angular id="adhocComponentTable" style="width: 100%; height: 100%;" rowSelection="multiple"
+    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [context]="context"
+    [rowData]="objectService.allObjects['adhocroom']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+    (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
+  </ag-grid-angular>
 </ion-content>
+<ion-searchbar *ngIf="authService.isMD()" placeholder="{{'search' | translate }}"
+  (input)="onQuickFilterChanged('adhocFilterMD')" id="adhocFilterMD" showCancelButton="never"></ion-searchbar>
 <ion-content *ngIf="authService.isMD()">
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small">
@@ -63,8 +45,6 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('adhocFilterMD')" id="adhocFilterMD"
-    showCancelButton="never"></ion-searchbar>
   <ion-list>
     <ion-item-sliding *ngFor="let object of rowData">
       <ion-item button (click)="redirectToEdit(object)">
@@ -87,6 +67,4 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
-
 </ion-content>
-
