--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -1,48 +1,37 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{'Manage rooms' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
-<ion-content  *ngIf="!authService.isMD()" id="carded">
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{'Manage rooms' | translate}}</ion-card-title>
-        <ion-item>
-          <ion-label *ngIf="gridApi">
-            #{{gridApi.getDisplayedRowCount()}}
-          </ion-label>
-          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilter')"
-            id="roomsFilter">
-          </ion-input>
-        </ion-item>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
-            matTooltip="{{'Create a new room' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="openActions($event,null)"
-            matTooltip="{{'Apply actions on the selected objects' | translate }}">
-            <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="openCollums($event)"
-            matTooltip="{{'Select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular id="roomsComponentTable" style="width: 100%; height: 100%;"
-        class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
-        [rowData]="objectService.allObjects['room']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
-        rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+<cranix-toolbar title="{{'Manage rooms' | translate}}"></cranix-toolbar>
+<ion-content *ngIf="!authService.isMD()" id="carded">
+  <ion-toolbar>
+    <ion-item>
+      <ion-label *ngIf="gridApi">
+        #{{gridApi.getDisplayedRowCount()}}
+      </ion-label>
+      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilter')" id="roomsFilter">
+      </ion-input>
+    </ion-item>
+    <ion-buttons slot="end">
+      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+        matTooltip="{{'Create a new room' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="openActions($event,null)"
+        matTooltip="{{'Apply actions on the selected objects' | translate }}">
+        <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="openCollums($event)"
+        matTooltip="{{'Select the columns to show' | translate }}">
+        <ion-icon slot="icon-only" name="apps"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ag-grid-angular id="roomsComponentTable" style="width: 100%; height: 100%;"
+    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+    [rowData]="objectService.allObjects['room']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+    rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+    (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
+  </ag-grid-angular>
 </ion-content>
+<ion-searchbar *ngIf="authService.isMD()" placeholder="{{'search' | translate }}"
+  (input)="onQuickFilterChanged('roomsFilterMD')" id="roomsFilterMD" showCancelButton="never"></ion-searchbar>
 <ion-content *ngIf="authService.isMD()">
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small">
@@ -55,13 +44,8 @@
       <ion-fab-button (click)="redirectToEdit(null)">
         <ion-icon name="add-circle"></ion-icon>
       </ion-fab-button>
-      <!-- ion-fab-button>
-        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button -->
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilterMD')"
-    id="roomsFilterMD" showCancelButton="never"></ion-searchbar>
   <ion-list>
     <ion-item-sliding *ngFor="let object of rowData">
       <ion-item button (click)="redirectToEdit(object)">
