--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -1,58 +1,50 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-content id="carded">
-  <ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{'Available software packages:' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
+<cranix-toolbar title="{{'Available software packages:' | translate}}"></cranix-toolbar>
+<ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+  <ion-fab-button>
+    <ion-icon name="arrow-forward-circle"></ion-icon>
+  </ion-fab-button>
+  <ion-fab-list side="start">
+    <ion-fab-button *ngIf="authService.isAllowed('software.download')">
+      <ion-icon name="cloud-download" (click)="downloadSoftwares($event)"></ion-icon>
     </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button *ngIf="authService.isAllowed('software.download')" ><ion-icon name="cloud-download" (click)="downloadSoftwares($event)"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="refresh-outline" (click)="readInstallableSoftware()"></ion-icon></ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilterMD')" id="softwareFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{'Available software packages:' | translate}}</ion-card-title>
-          <ion-item>
-            <ion-label *ngIf="gridApi">
-              #{{gridApi.getDisplayedRowCount()}}
-            </ion-label>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilter')" id="softwareFilter">
-            </ion-input>
-          </ion-item>
-        <ion-buttons slot="end">
-          <ion-button *ngIf="authService.isAllowed('software.download')" size="small" fill="solid" (click)="downloadSoftwares($event)" matTooltip="{{'Download software packages.' | translate }}" >
-            <ion-icon slot="icon-only" name="cloud-download"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"  matTooltip="{{'Create a new software package' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="readInstallableSoftware()"  matTooltip="{{'Refresh package list.' | translate }}">
-            <ion-icon slot="icon-only" name="refresh-outline"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular
-        style="width: 100%; height: 100%;"
-        class="{{authService.settings.agGridThema}}"
-        [gridOptions]="gridOptions"
-        [rowData]="softwareService.availableSoftwares"
-        [columnDefs]="columnDefs"
-        [context]="context"
-        rowSelection="multiple"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (gridReady)="onGridReady($event)"
-        id="agGridTable">
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+    <ion-fab-button>
+      <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button>
+      <ion-icon name="refresh-outline" (click)="readInstallableSoftware()"></ion-icon>
+    </ion-fab-button>
+  </ion-fab-list>
+</ion-fab>
+<ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilterMD')"
+  id="softwareFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+<ion-content id="carded">
+  <ion-toolbar>
+    <ion-item>
+      <ion-label *ngIf="gridApi">
+        #{{gridApi.getDisplayedRowCount()}}
+      </ion-label>
+      <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilter')"
+        id="softwareFilter">
+      </ion-input>
+    </ion-item>
+    <ion-buttons slot="end">
+      <ion-button *ngIf="authService.isAllowed('software.download')" size="small" fill="solid"
+        (click)="downloadSoftwares($event)" matTooltip="{{'Download software packages.' | translate }}">
+        <ion-icon slot="icon-only" name="cloud-download"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+        matTooltip="{{'Create a new software package' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="readInstallableSoftware()"
+        matTooltip="{{'Refresh package list.' | translate }}">
+        <ion-icon slot="icon-only" name="refresh-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+    [gridOptions]="gridOptions" [rowData]="softwareService.availableSoftwares" [columnDefs]="columnDefs"
+    [context]="context" rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+    (gridReady)="onGridReady($event)" id="agGridTable">
+  </ag-grid-angular>
 </ion-content>
