--- a/src/app/protected/cranix/softwares/sets/installation-sets.component.html
+++ b/src/app/protected/cranix/softwares/sets/installation-sets.component.html
@@ -1,61 +1,49 @@
-<cranix-toolbar></cranix-toolbar>
+<cranix-toolbar title="{{ 'Manage software installation sets:' | translate}}"></cranix-toolbar>
+<ion-searchbar placeholder="{{'search' | translate }}" (input)="setFilterChanged()" id="installationSetFilter"
+showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
 <ion-content id="carded">
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{ 'Manage software installation sets:' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
-<ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-  <ion-fab-button>
-    <ion-icon name="arrow-forward-circle"></ion-icon>
-  </ion-fab-button>
-  <ion-fab-list side="start">
-    <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon></ion-fab-button>
-    <ion-fab-button><ion-icon name="pencil-outline" (click)="applyState()"></ion-icon></ion-fab-button>
-    <ion-fab-button><ion-icon name="refresh-outline" (click)="applyState()"></ion-icon></ion-fab-button>
-  </ion-fab-list>
-</ion-fab>
-<ion-searchbar placeholder="{{'search' | translate }}" (input)="setFilterChanged()" id="installationSetFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{ 'Manage software installation sets:' | translate}}</ion-card-title>
-        <ion-item>
-          <ion-label *ngIf="installationSetApi">
-            #{{installationSetApi.getDisplayedRowCount()}}
-          </ion-label>
-          <ion-input placeholder="{{'search' | translate }}" (input)="setFilterChanged()" id="installationSetFilter">
-          </ion-input>
-        </ion-item>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"  matTooltip="{{'Create a new installation set' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="writeConfig()"  matTooltip="{{'Write state files for the devices' | translate }}">
-            <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
-          </ion-button>
-          <ion-button size="small" fill="solid" (click)="applyState()"  matTooltip="{{'Apply state on all running devices' | translate }}">
-            <ion-icon slot="icon-only" name="refresh-outline"></ion-icon>
-          </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ag-grid-angular 
-        #agGrid
-        style="width: 100%; height: 100%;"
-        class="{{authService.settings.agGridThema}}"
-        rowHeight="{{authService.settings.rowHeight}}"
-        [rowData]="installationSetData"
-        [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef"
-        [context]="context"
-        rowSelection="multiple"
-        (gridReady)="installationSetReady($event)"
-        id="installationSetTable"
-        [autoGroupColumnDef]="autoGroupColumnDef"
-        >
-      </ag-grid-angular>
-    </ion-card-content>
-  </ion-card>
+  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+    <ion-fab-button>
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-fab-button>
+        <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="pencil-outline" (click)="applyState()"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="refresh-outline" (click)="applyState()"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <ion-toolbar>
+    <ion-item>
+      <ion-label *ngIf="installationSetApi">
+        #{{installationSetApi.getDisplayedRowCount()}}
+      </ion-label>
+      <ion-input placeholder="{{'search' | translate }}" (input)="setFilterChanged()" id="installationSetFilter">
+      </ion-input>
+    </ion-item>
+    <ion-buttons slot="end">
+      <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
+        matTooltip="{{'Create a new installation set' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="writeConfig()"
+        matTooltip="{{'Write state files for the devices' | translate }}">
+        <ion-icon slot="icon-only" name="pencil-outline"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="applyState()"
+        matTooltip="{{'Apply state on all running devices' | translate }}">
+        <ion-icon slot="icon-only" name="refresh-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ag-grid-angular #agGrid style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+    rowHeight="{{authService.settings.rowHeight}}" [rowData]="installationSetData" [columnDefs]="columnDefs"
+    [defaultColDef]="defaultColDef" [context]="context" rowSelection="multiple"
+    (gridReady)="installationSetReady($event)" id="installationSetTable" [autoGroupColumnDef]="autoGroupColumnDef">
+  </ag-grid-angular>
 </ion-content>
