--- a/src/app/protected/cranix/users/lists/users-import.component.html
+++ b/src/app/protected/cranix/users/lists/users-import.component.html
@@ -1,132 +1,118 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col>
-    <ion-title>{{'Manage user imports' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
-<ion-content *ngIf="!authService.isMD()" id="carded">
-  <ion-card>
-    <ion-card-header>
-      <ion-toolbar>
-        <ion-card-title>{{'Manage user imports' | translate}}</ion-card-title>
-        <ion-buttons slot="end">
-          <ion-button *ngIf="!runningImport" size="small" fill="solid" (click)="startImport()"
-            matTooltip="{{'Start a new user import' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+<cranix-toolbar title="{{'Manage user imports' | translate}}"></cranix-toolbar>
+<ion-content *ngIf="!authService.isMD()">
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button *ngIf="!runningImport" size="small" fill="solid" (click)="startImport()"
+        matTooltip="{{'Start a new user import' | translate }}">
+        <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+      </ion-button>
+      <ion-button size="small" fill="solid" (click)="refreshImports()"
+        matTooltip="{{'Refresh the import list' | translate }}">
+        <ion-icon slot="icon-only" name="refresh"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+  <ion-grid>
+    <ion-row style="background-color : {{authService.rowColors[2]}}">
+      <ion-col size=2>{{'Start time' | translate}}</ion-col>
+      <ion-col size=2></ion-col>
+      <ion-col size=1>{{'role' | translate}}</ion-col>
+      <ion-col size=1>{{'identifier' | translate}}</ion-col>
+      <ion-col size=1>{{'password' |translate}}</ion-col>
+      <ion-col size=1>{{'mustChange' |translate}}</ion-col>
+      <ion-col size=1>{{'resetPassword' |translate}}</ion-col>
+      <ion-col size=1>{{'full' |translate}}</ion-col>
+      <ion-col size=1>{{'allClasses' |translate}}</ion-col>
+      <ion-col size=1>{{'cleanClassDirs' |translate}}</ion-col>
+    </ion-row>
+    <ion-row *ngIf="runningImport" [ngStyle]="{'color':'#eb445a'}">
+      <ion-col size=2>{{runningImport.startTime}} </ion-col>
+      <ion-col size=2>
+        <ion-button color="light" size="small" (click)="showImport($event,runningImport)"
+          matTooltip="{{'Import ist just running.'|translate}} {{'Show the import result.' | translate }}">
+          <ion-icon slot="icon-only" color="warning" name="cog"></ion-icon>
+        </ion-button>
+        <ion-button color="light" size="small" (click)="stopImport()"
+          matTooltip="{{'Stop the running user import' | translate }}">
+          <ion-icon slot="icon-only" name="stop-circle-outline" color="danger"></ion-icon>
+        </ion-button>
+      </ion-col>
+      <ion-col size=1>{{runningImport.role | translate}}</ion-col>
+      <ion-col>{{runningImport.identifier | translate}} </ion-col>
+      <ion-col> {{runningImport.password}}</ion-col>
+      <ion-col>
+        <ion-icon *ngIf="runningImport.mustChange" color="success" name="checkmark-sharp" size="small"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon *ngIf="runningImport.resetPassword" color="success" name="checkmark-sharp" size="small">
+        </ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon *ngIf="runningImport.full" color="success" name="checkmark-sharp" size="small"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon *ngIf="runningImport.allClasses" color="success" name="checkmark-sharp" size="small"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon *ngIf="runningImport.cleanClassDirs" color="success" name="checkmark-sharp" size="small">
+        </ion-icon>
+      </ion-col>
+    </ion-row>
+    <div *ngFor="let import of imports; index as i">
+      <ion-row *ngIf="!runningImport || runningImport.startTime != import.startTime"
+        style="background-color : {{authService.rowColors[i%2]}}">
+        <ion-col size=2>{{import.startTime}} </ion-col>
+        <ion-col size=2>
+          <ion-button color="light" size="small" (click)="showImport($event,import)"
+            matTooltip="{{'Show the import result.' | translate }}">
+            <ion-icon *ngIf="import.test" slot="icon-only" color="warning" name="eye-outline"></ion-icon>
+            <ion-icon *ngIf="!import.test" slot="icon-only" color="success" name="eye-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" fill="solid" (click)="refreshImports()"
-            matTooltip="{{'Refresh the import list' | translate }}">
-            <ion-icon slot="icon-only" name="refresh"></ion-icon>
+          <ion-button color="light" *ngIf="import.test && !runningImport" size="small"
+            (click)="restartImport(import.startTime)"
+            matTooltip="{{'Start the import as real import not test.' | translate }}">
+            <ion-icon slot="icon-only" color="warning" name="reload"></ion-icon>
           </ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-card-header>
-    <ion-card-content>
-      <ion-grid>
-        <ion-row style="background-color : {{authService.rowColors[2]}}">
-          <ion-col size=2>{{'Start time' | translate}}</ion-col>
-          <ion-col size=2></ion-col>
-          <ion-col size=1>{{'role' | translate}}</ion-col>
-          <ion-col size=1>{{'identifier' | translate}}</ion-col>
-          <ion-col size=1>{{'password' |translate}}</ion-col>
-          <ion-col size=1>{{'mustChange' |translate}}</ion-col>
-          <ion-col size=1>{{'resetPassword' |translate}}</ion-col>
-          <ion-col size=1>{{'full' |translate}}</ion-col>
-          <ion-col size=1>{{'allClasses' |translate}}</ion-col>
-          <ion-col size=1>{{'cleanClassDirs' |translate}}</ion-col>
-        </ion-row>
-        <ion-row *ngIf="runningImport" [ngStyle]="{'color':'#eb445a'}">
-          <ion-col size=2>{{runningImport.startTime}} </ion-col>
-          <ion-col size=2>
-            <ion-button color="light" size="small" (click)="showImport($event,runningImport)"
-              matTooltip="{{'Import ist just running.'|translate}} {{'Show the import result.' | translate }}">
-              <ion-icon slot="icon-only" color="warning" name="cog"></ion-icon>
-            </ion-button>
-            <ion-button color="light" size="small" (click)="stopImport()"
-              matTooltip="{{'Stop the running user import' | translate }}">
-              <ion-icon slot="icon-only" name="stop-circle-outline" color="danger"></ion-icon>
-            </ion-button>
-          </ion-col>
-          <ion-col size=1>{{runningImport.role | translate}}</ion-col>
-          <ion-col>{{runningImport.identifier | translate}} </ion-col>
-          <ion-col> {{runningImport.password}}</ion-col>
-          <ion-col>
-            <ion-icon *ngIf="runningImport.mustChange" color="success" name="checkmark-sharp" size="small"></ion-icon>
-          </ion-col>
-          <ion-col>
-            <ion-icon *ngIf="runningImport.resetPassword" color="success" name="checkmark-sharp" size="small">
-            </ion-icon>
-          </ion-col>
-          <ion-col>
-            <ion-icon *ngIf="runningImport.full" color="success" name="checkmark-sharp" size="small"></ion-icon>
-          </ion-col>
-          <ion-col>
-            <ion-icon *ngIf="runningImport.allClasses" color="success" name="checkmark-sharp" size="small"></ion-icon>
-          </ion-col>
-          <ion-col>
-            <ion-icon *ngIf="runningImport.cleanClassDirs" color="success" name="checkmark-sharp" size="small">
-            </ion-icon>
-          </ion-col>
-        </ion-row>
-        <div *ngFor="let import of imports; index as i">
-          <ion-row *ngIf="!runningImport || runningImport.startTime != import.startTime"
-            style="background-color : {{authService.rowColors[i%2]}}">
-            <ion-col size=2>{{import.startTime}} </ion-col>
-            <ion-col size=2>
-              <ion-button color="light" size="small" (click)="showImport($event,import)"
-                matTooltip="{{'Show the import result.' | translate }}">
-                <ion-icon *ngIf="import.test" slot="icon-only" color="warning" name="eye-outline"></ion-icon>
-                <ion-icon *ngIf="!import.test" slot="icon-only" color="success" name="eye-outline"></ion-icon>
-              </ion-button>
-              <ion-button color="light" *ngIf="import.test && !runningImport" size="small"
-                (click)="restartImport(import.startTime)"
-                matTooltip="{{'Start the import as real import not test.' | translate }}">
-                <ion-icon slot="icon-only" color="warning" name="reload"></ion-icon>
-              </ion-button>
-              <ion-button color="light" *ngIf="!import.test" size="small"
-                (click)="downloadImport(import.startTime,'pdf')"
-                matTooltip="{{'Download the password files as pdf files.' | translate }}">
-                <ion-icon slot="icon-only" color="success" name="download"></ion-icon>
-              </ion-button>
-              <ion-button color="light" *ngIf="!import.test" size="small"
-                (click)="downloadImport(import.startTime,'txt')"
-                matTooltip="{{'Download the password files as txt files.' | translate }}">
-                <ion-icon slot="icon-only" color="warning" name="download"></ion-icon>
-              </ion-button>
-              <ion-button color="light" size="small" (click)="deleteImport(import.startTime)"
-                matTooltip="{{'Delete the import.' | translate }}">
-                <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
-              </ion-button>
-            </ion-col>
-            <ion-col size=1>{{import.role | translate}}
-            </ion-col>
-            <ion-col>{{import.identifier | translate}} </ion-col>
-            <ion-col> {{import.password}}</ion-col>
-            <ion-col>
-              <ion-icon *ngIf="import.mustChange" color="success" name="checkmark-sharp" size="small"></ion-icon>
-              <ion-icon *ngIf="!import.mustChange" color="danger" name="close" size="small"></ion-icon>
-            </ion-col>
-            <ion-col>
-              <ion-icon *ngIf="import.resetPassword" color="success" name="checkmark-sharp" size="small"></ion-icon>
-              <ion-icon *ngIf="!import.resetPassword" color="danger" name="close" size="small"></ion-icon>
-            </ion-col>
-            <ion-col>
-              <ion-icon *ngIf="import.full" color="success" name="checkmark-sharp" size="small"></ion-icon>
-              <ion-icon *ngIf="!import.full" color="danger" name="close" size="small"></ion-icon>
-            </ion-col>
-            <ion-col>
-              <ion-icon *ngIf="import.allClasses" color="success" name="checkmark-sharp" size="small"></ion-icon>
-              <ion-icon *ngIf="!import.allClasses" color="danger" name="close" size="small"></ion-icon>
-            </ion-col>
-            <ion-col>
-              <ion-icon *ngIf="import.cleanClassDirs" color="success" name="checkmark-sharp" size="small"></ion-icon>
-              <ion-icon *ngIf="!import.cleanClassDirs" color="danger" name="close" size="small"></ion-icon>
-            </ion-col>
-          </ion-row>
-        </div>
-      </ion-grid>
-    </ion-card-content>
-  </ion-card>
+          <ion-button color="light" *ngIf="!import.test" size="small" (click)="downloadImport(import.startTime,'pdf')"
+            matTooltip="{{'Download the password files as pdf files.' | translate }}">
+            <ion-icon slot="icon-only" color="success" name="download"></ion-icon>
+          </ion-button>
+          <ion-button color="light" *ngIf="!import.test" size="small" (click)="downloadImport(import.startTime,'txt')"
+            matTooltip="{{'Download the password files as txt files.' | translate }}">
+            <ion-icon slot="icon-only" color="warning" name="download"></ion-icon>
+          </ion-button>
+          <ion-button color="light" size="small" (click)="deleteImport(import.startTime)"
+            matTooltip="{{'Delete the import.' | translate }}">
+            <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+          </ion-button>
+        </ion-col>
+        <ion-col size=1>{{import.role | translate}}
+        </ion-col>
+        <ion-col>{{import.identifier | translate}} </ion-col>
+        <ion-col> {{import.password}}</ion-col>
+        <ion-col>
+          <ion-icon *ngIf="import.mustChange" color="success" name="checkmark-sharp" size="small"></ion-icon>
+          <ion-icon *ngIf="!import.mustChange" color="danger" name="close" size="small"></ion-icon>
+        </ion-col>
+        <ion-col>
+          <ion-icon *ngIf="import.resetPassword" color="success" name="checkmark-sharp" size="small"></ion-icon>
+          <ion-icon *ngIf="!import.resetPassword" color="danger" name="close" size="small"></ion-icon>
+        </ion-col>
+        <ion-col>
+          <ion-icon *ngIf="import.full" color="success" name="checkmark-sharp" size="small"></ion-icon>
+          <ion-icon *ngIf="!import.full" color="danger" name="close" size="small"></ion-icon>
+        </ion-col>
+        <ion-col>
+          <ion-icon *ngIf="import.allClasses" color="success" name="checkmark-sharp" size="small"></ion-icon>
+          <ion-icon *ngIf="!import.allClasses" color="danger" name="close" size="small"></ion-icon>
+        </ion-col>
+        <ion-col>
+          <ion-icon *ngIf="import.cleanClassDirs" color="success" name="checkmark-sharp" size="small"></ion-icon>
+          <ion-icon *ngIf="!import.cleanClassDirs" color="danger" name="close" size="small"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </div>
+  </ion-grid>
 </ion-content>
 <ion-content *ngIf="authService.isMD()">
   <ion-fab vertical="top" horizontal="end" slot="fixed">
@@ -138,8 +124,7 @@
         matTooltip="{{'Start a new user import' | translate }}">
         <ion-icon name="add-circle"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button (click)="refreshImports()"
-        matTooltip="{{'Refresh the import list' | translate }}">
+      <ion-fab-button (click)="refreshImports()" matTooltip="{{'Refresh the import list' | translate }}">
         <ion-icon name="refresh"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
