--- a/src/app/protected/edu/lessons/tabs/room-control/room-control.component.scss
+++ b/src/app/protected/edu/lessons/tabs/room-control/room-control.component.scss
@@ -14,18 +14,19 @@
         overflow: scroll;
 
     }
-}*/
-
+}
+ion-item-divider {
+    max-height: 1px;
+}
 ion-grid {
-    
     flex-grow: initial;
     overflow: hidden;
-    padding-top: 50px;
+    padding-top: 5px;
     height: 100%;
     width: 100%;
-
 }
 .grid-row{
     justify-content: space-between;
     align-items: center;
 }
+*/
